--- a/css/style1.css
+++ b/css/style1.css
@@ -13,7 +13,7 @@ img {
     width: 100%;
     height: 230px;
     object-fit: cover;
-    object-position: 0% 80% /*es una decisión conciente*/
+    object-position: 0% 80% /*es una decisión conciente que solo se vean los pies*/
 }
 
 #banner2 {
@@ -73,7 +73,6 @@ article {
     font-size: 22px;
     margin-bottom:20px;
     margin-right: 220px;;
-    /* margin-right: 150px; */
     margin-left: 280px;    
 }
 
@@ -95,22 +94,3 @@ div{
 div>p{
     padding-top: 20px;
 }
-
-/* article {
-    font-size: 22px;
-    margin: 30px 270px 30px 
-}
-
-h3 {
-    font-weight: bolder;
-    font-style: italic;
-}
-
-article>p {
-    text-indent: 25px;
-}
-
-div>p{
-    font-size: 22px;
-    margin: 30px 270px 30px 
-} */
