--- a/css/style3.css
+++ b/css/style3.css
@@ -102,6 +102,11 @@ nav>a {
     text-transform: uppercase;
 }
 
+.main-form{
+    padding: 3rem;
+
+}
+
 .events {
     display: flex;
     flex-wrap: wrap;
@@ -271,25 +276,53 @@ caption {
     text-decoration: underline;
 }
 
-#table-game_info {
+
+tr,td{
     text-align: left;
     align-items: center;
+}
+
+th{
+    text-align: left;
+    width: 17rem;
 }
 
 #table-game_info,
 th,
 tr,
-td {
-    border-right: 1rem solid transparent;
+td{
+    /* background-color: blue;
+    border: solid 1px black; */
     border-collapse: collapse;
+    line-height: 20px;
+    padding:5px;
+    /* border-right: 1rem solid transparent;
+    border-collapse: collapse; */
 }
 
 .teams {
-    padding-bottom: 0.5rem;
+    /* padding-bottom: 0.1; */
+    /* padding-bottom: 0.5rem; */
 }
 
 .date {
-    text-align: right;
+    text-align: center;
+}
+
+
+.a-maps{
+    text-decoration: none;
+    font-size: small;
+}
+
+.maps{
+    height: 80vh;
+    padding: 0rem 5rem;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-evenly;
 }
 
 .container-game_info {
